k8s/consul.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: surging-hero-middle
    component: consul
  name: consul
spec:
  ports:
  - name: "8400"
    port: 8400
    targetPort: 8400
  - name: "8500"
    port: 8500
    targetPort: 8500
  - name: "8600"
    port: 8600
    targetPort: 8600
    protocol: TCP
  - name: "8600-udp"
    port: 8600
    targetPort: 8600
    protocol: UDP
  selector:
    app: surging-hero-middle
    component: consul
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: consul
spec:
  template:
    metadata:
      labels:
        app: surging-hero-middle
        component: consul
    spec:
      containers:
        - name: consul
          image: "consul:latest"
          args:
            - "agent"
            - "-server"
            - "-bootstrap-expect=1"
            - "-ui"
            - "-client=0.0.0.0"
          ports:
          - containerPort: 8400
            name: "port-8400"
          - containerPort: 8500
            name: "port-8500"
          - containerPort: 8600
            name: "port-8600"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: surging-hero-middle
    component: frontend
  name: consul-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: consul.surginghero.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consul
          servicePort: 8500
